se acomodaron un par de cosas de la parte grafica y se agregaron los ruteos

--- a/src/app/beer-list/beer-list.component.html
+++ b/src/app/beer-list/beer-list.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table text-center">
     <thead>
         <tr>
             <th>Imagen</th>
@@ -6,11 +6,12 @@
             <th>Nombre</th>
             <th>Precio</th>
             <th>Stock</th>
+            <th>Compra</th>
         </tr>
     </thead>
     <tbody>
         <tr *ngFor="let beer of beers" [ngClass]= "{'clearance': beer.clearance}">
-            <td><img [src]="beer.image" [alt]="beer.name"></td>
+            <td><img width="90" class="img-thumbnail" [src]="beer.image" [alt]="beer.name"></td>
             <td>{{beer.name}}</td>
             <td>{{beer.type}}</td>
             <td>{{beer.price | currency}}</td>
@@ -19,6 +20,23 @@
                 <ng-template #elseBlock>
                     <span class="badge badge-success">EN STOCK</span>
                 </ng-template>
+            </td>
+            <td>
+                <!--
+                <button class="btn btn-primary btn-sm" (click)="downQuantity(beer)">-</button>
+                <input type="number" [(ngModel)]="beer.quantity">
+                <button class="btn btn-primary btn-sm" (click)="upQuantity(beer)">+</button>
+                -->
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <button class="btn btn-outline-primary" type="button" (click)="downQuantity(beer)">-</button>
+                    </div>
+                        <input type="text" class="form-control text-center" [(ngModel)]="beer.quantity">
+                    <div class="input-group-append">
+                        <button class="btn btn-outline-primary" type="button"  (click)="upQuantity(beer)">+</button>
+                      </div>
+                  </div>
+
             </td>
         </tr>
     </tbody>
