--- a/src/app/beer-list/beer-list.component.scss
+++ b/src/app/beer-list/beer-list.component.scss
@@ -2,10 +2,10 @@
     background-color: lightskyblue;
 }
 
-input{
-    max-width: 40px;
-}
-
 td{
     vertical-align: middle;
+}
+
+h1{
+    text-align: center;
 }
