inyeccion de dependencias y observer observable

--- a/src/app/beer-list/beer-list.component.html
+++ b/src/app/beer-list/beer-list.component.html
@@ -24,6 +24,7 @@
             </td>
             <td>
                 <app-input-integer [(quantity)]="beer.quantity" [max]="beer.stock" (maxReached)="maxReached($event)" *ngIf="beer.stock"></app-input-integer>
+                <button class="btn btn-outline-primary" (click)="addToCart(beer)">Comprar</button>
             </td>
         </tr>
     </tbody>
